1.1.1
- fixed Django 1.5- compatibility (aykutozat)

1.1
- Django 1.6+ support
- added Django template tags
- fixed caching querysets combined with | and & operators

1.0.3
- added db_agnostic option to cache profile
- partial support for Django 1.6+

1.0.2
- fixed cached_on_save
- fixed .inplace() altering cache key

1.0.1
- .delete() method for simple cache
- .invalidate() method for @cached() and file_cache.cached() functions

1.0.0
- defend against model changes corrupting cache (ttyS15)
- support F-expressions (Yuego)
- fixed local_get with unhashable arg TypeError
- fixed caching of raw queries (Yuego)

0.9.9
- fixed file cache md5 reference

0.9.8
- support isnull lookup for better invalidation
- fixed 'Query' has no len()
- dumped django.utils.hashcompat in favor of hashlib

0.9.7
- support for flex models
- support @cached_as(SomeModel)
- file cache default dir changed to /tmp/cacheops_file_cache
- better support for tuples in extra param in @cached and jinja2 tags

0.9.6
- support gracefull degradation on redis fail (Beres Botond)

0.9.5
- support for proxy models

0.9.4
- fixed occasional redis 100% cpu use (tumb1er)

0.9.3
- invalidate and cleanfilecache commands added to dist
- django 1.5 compatability (jhpinson)

0.9.2
- compatability with latest redis-py
- many other bug fixes
- minor optimizations
- better docs, including PERFORMANCE section