@@ -1,3 +1,4 @@
 django>=1.3
 redis>=2.4.12
 simplejson>=2.2.0
+six
