@@ -1,65 +1,60 @@
 [tox]
-envlist = py26-dj13,py26-dj14,py26-dj15,py27-dj13,py27-dj14,py27-dj15,py27-dj16
-;,py33-dj15,py33-dj16
+envlist = py26-dj13,py26-dj14,py26-dj15,py26-dj16,py27-dj13,py27-dj14,py27-dj15,py27-dj16,py33-dj15,py33-dj16
 
 [testenv]
-deps =
-    redis>=2.4.10
-    simplejson>=2.2.0
-    unittest2
 commands =
     ./run_tests.py
 
 [testenv:py26-dj13]
 basepython = python2.6
 deps=
-    {[testenv]deps}
+    unittest2
     Django==1.3.2
 
 [testenv:py26-dj14]
 basepython = python2.6
 deps=
-    {[testenv]deps}
+    unittest2
     Django==1.4.10
 
 [testenv:py26-dj15]
 basepython = python2.6
 deps=
-    {[testenv]deps}
+    unittest2
     Django==1.5.5
+
+[testenv:py26-dj16]
+basepython = python2.6
+deps=
+    unittest2
+    Django==1.6.0
 
 [testenv:py27-dj13]
 basepython = python2.7
 deps=
-    {[testenv]deps}
     Django==1.3.2
 
 [testenv:py27-dj14]
 basepython = python2.7
 deps=
-    {[testenv]deps}
     Django==1.4.9
 
 [testenv:py27-dj15]
 basepython = python2.7
 deps=
-    {[testenv]deps}
     Django==1.5.5
 
 [testenv:py27-dj16]
 basepython = python2.7
 deps=
-    {[testenv]deps}
     Django==1.6
 
 [testenv:py33-dj15]
 basepython = python3.3
 deps=
-    {[testenv]deps}
     Django==1.5.5
 
 [testenv:py33-dj16]
 basepython = python3.3
 deps=
-    {[testenv]deps}
     Django==1.6
