@@ -1,3 +1,5 @@
+- Python 3 support
+
 1.1.1
 - fixed Django 1.5- compatibility (aykutozat)
 
